# local_neuro_and_tochka

docs/: ai_orchestrator_spec.md  api_docs.md  api_gatewat.md  backend.md  document_service_spec.md  ingestion_service_spec.md  llm_service_spec.md  mcp_tools_proxy_spec.md  p_diddy.md  pipeline.md  retrieval_service_spec.md  safety_service_spec.md
services/api_gateway/: README.md  pyproject.toml
services/api_gateway/api_gateway/: config.py  dependencies.py  logging.py  main.py  schemas.py
services/api_gateway/api_gateway/clients/: auth.py  base.py  documents.py  ingestion.py  orchestrator.py  safety.py
services/api_gateway/api_gateway/core/: context.py  middleware.py  rate_limit.py
services/api_gateway/api_gateway/routers/: __init__.py  assistant.py  auth.py  documents.py  health.py
services/api_gateway/tests/: test_api_endpoints.py  test_rate_limiter.py
services/safety_service/: README.md  pyproject.toml
services/safety_service/safety_service/: config.py  logging.py  main.py  schemas.py
services/safety_service/safety_service/core/: evaluator.py
services/safety_service/safety_service/routers/: __init__.py  safety.py
services/safety_service/tests/: test_api.py  test_evaluator.py
